# spark-oss-dq-framework-samples

./: LICENSE  README.md  pyproject.toml
oss_data_quality_frameworks_compare/: sparksession.py  transformations.py
oss_data_quality_frameworks_compare/dq_with_pydeequ/: data_quality.py
oss_data_quality_frameworks_compare/dq_with_soda_core/: data_quality.py  default_soda_config.yml
tests/: conftest.py  test_oss_data_quality_frameworks_compare.py  test_pydeequ.py  test_sodacore.py  test_transformations.py  test_transformations_create_dataframe.py
